src/modules/album/components/AlbumTrack/AlbumTrack.module.scss
.album-track {
  @apply duration-200 grid grid-cols-12 items-center py-1 rounded-md transition-colors mb-2 sm:px-2;
  &-duration {
    @apply hidden text-sm md:col-span-1 md:flex md:justify-end md:pl-2 md:pr-4;
  }
  &-title {
    @apply col-span-full flex items-center truncate md:col-span-11;
    &-data {
      @apply flex flex-col truncate w-full lg:pl-4 lg:pr-2;
      &-artists {
        @apply flex flex-wrap truncate;
        &-item {
          @apply text-sm;
          &-link {
            @apply duration-200 transition-colors;
          }
        }
      }
      &-name {
        @apply duration-200 transition-colors truncate;
      }
    }
    &-index {
      @apply h-9 hidden items-center justify-center shrink-0 w-9 sm:flex;
    }
    &-play {
      @apply h-9 hidden shrink-0 w-9 sm:flex;
    }
  }
}

@media (hover: none) {
  .album-track {
    &-title {
      &-data {
        @apply sm:pl-2 sm:pr-1;
      }
      &-index {
        @apply hidden;
      }
    }
  }
}

@media (hover: hover) {
  .album-track {
    &-title {
      &-data {
        @apply pl-2 pr-1;
      }
    }
  }
}

